--- a/style1.css
+++ b/style1.css
@@ -38,7 +38,8 @@ nav a {
 .hero {
     background: #9f9090;
     text-align: center;
-    padding: 100px 0;    
+    padding: 100px 0;  
+    justify-content: center;
 }
 
 
