--- a/style.css
+++ b/style.css
@@ -48,11 +48,12 @@ header nav ul li a {
 }
 
 .hero {
-    background: url('img/rm222batch2-mind-03.jpg') no-repeat center center/cover; /* Replace with your hero image */
+    --background: url('img/rm222batch2-mind-03.jpg') no-repeat center center/cover; /* Replace with your hero image */
     text-align: center;
     color: #000000;
     padding: 100px 0;
     background-repeat: no-repeat;
+    background-color: bisque;
 }
 
 .hero h2 {
