--- a/style.css
+++ b/style.css
@@ -66,3 +66,11 @@ button:hover {
     ),
     url("img/461724223_516452944648652_158664558620912082_n.jpg");
 }
+.btn {
+  display: inline-block;
+  background: #ff0000;
+  color: #00fbff;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+}
